fix broken import bugs

--- a/src/styles/_reachui.scss
+++ b/src/styles/_reachui.scss
@@ -1,6 +1,4 @@
-@import '@reach/slider/styles';
-@import '@reach/menu-button/styles';
-@import '@reach/dialog/styles';
+@import "@reach/slider/styles";
 
 /**
  * Menu List
